# terrain_with_bevy

./: Cargo.toml  LICENSE  a.txt  main.py
assets/shaders/: default_texture_shader.wgsl  experimental_shader.wgsl  game_of_life.wgsl  other_shader.wgsl  render_shader.wgsl  shadow_compute.wgsl
src/: chunk_generator.rs  color_map.rs  com.rs  components.rs  compute_shader.rs  constants.rs  drill.rs  fog.rs  keyboard_controller.rs  layer_map.rs  main.rs  materials.rs  mouse_controller.rs  player.rs  render.rs  sun.rs  test_util.rs  tools.rs  ui.rs  util.rs  world_generation.rs
