[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.6"
bevy = "0.14.1"
bevy_reflect = "0.14.2"
fastrand = "2.1.1"
iyes_perf_ui = "0.3.0"
noise = "0.9.0"
rand = "0.9.0"
rayon = "1.10.0"

# Cargo.toml
[profile.opdebug]
inherits = "release"
debug-assertions = true
