[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy_reflect = "0.14"
bytemuck = "1.21.0"
chrono = "0.4.39"
iyes_perf_ui = "0.3.0"
noise = "0.9.0"
rand = "0.9.0"
wgpu = "0.20.1"

# Cargo.toml
[profile.opdebug]
inherits = "release"
debug-assertions = true
